<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.neo.jagil</groupId>
  <artifactId>JAGIL</artifactId>
  <version>3.3.13-SNAPSHOT</version>
  <build>
  	<extensions>
  		<extension>
  			<groupId>org.apache.maven.wagon</groupId>
  			<artifactId>wagon-ftp</artifactId>
  			<version>3.0.0</version>
  		</extension>
  	</extensions>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
		<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
      </plugin>
	  <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-javadoc-plugin</artifactId>
		  <version>3.3.0</version>
		  <executions>
			  <execution>
				  <id>attach-javadocs</id>
				  <goals>
					  <goal>jar</goal>
				  </goals>
			  </execution>
		  </executions>
	  </plugin>
	  <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-source-plugin</artifactId>
		  <version>3.2.1</version>
		  <executions>
			  <execution>
				  <id>attach-sources</id>
				  <goals>
					  <goal>jar</goal>
				  </goals>
			  </execution>
		  </executions>
	  </plugin>
    </plugins>
  </build>
  <distributionManagement>
  	<repository>
  		<id>ftp-repo</id>
  		<url>ftp://neo8.de/repo/</url>
  	</repository>
  </distributionManagement>
  <repositories>
  	<repository>
  		<id>minecraft-repo</id>
  		<url>https://libraries.minecraft.net/</url>
  	</repository>
  	<repository>
  		<id>spigot-repo</id>
  		<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
  	</repository>
  </repositories>
  <dependencies>
  	<dependency>
  		<groupId>org.spigotmc</groupId>
  		<artifactId>spigot-api</artifactId>
  		<version>1.17-R0.1-SNAPSHOT</version>
  		<scope>provided</scope>
  	</dependency>
  	<dependency>
  		<groupId>com.mojang</groupId>
  		<artifactId>authlib</artifactId>
  		<version>2.1.28</version>
  		<scope>provided</scope>
  	</dependency>
  </dependencies>
</project>